--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "date-fns": "^4.1.0",
+    "date-fns": "3.6.0",
     "lucide-react": "^0.356.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
